# github-skills-map

./: README.md  pyproject.toml
.axentx-dev-bot/: 20260618-111804-github-skills-map-docs-2a78ce54.md  20260618-113059-github-skills-map-docs-599a70e8.md
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md  TECH_SPEC.md
src/: github_skills_map.py
tests/: test_github_skills_map.py
